function(intervalTree TOP BOT)
  add_executable(intervalTree-${TOP}-${BOT} intervalTree.cpp)
    target_link_libraries(intervalTree-${TOP}-${BOT} PRIVATE parlay CPAM aspen)
    if (${BOT} EQUAL "CPAM-Diff")
      target_compile_definitions(intervalTree-${TOP}-${BOT} PRIVATE -DUSE_DIFF_ENCODING)
    endif()
    if (${TOP} EQUAL "PAM")
      target_compile_definitions(intervalTree-${TOP}-${BOT} PRIVATE -DUSE_PAM_UPPER)
    endif()
    if (${BOT} EQUAL "PAM")
      target_compile_definitions(intervalTree-${TOP}-${BOT} PRIVATE -DUSE_PAM)
    endif()
endfunction()

intervalTree(CPAM CPAM)
intervalTree(CPAM CPAM-Diff)
intervalTree(PAM CPAM)
intervalTree(PAM CPAM-Diff)
intervalTree(PAM PAM)
