function(range_test TOP BOT)
  add_executable(range_test-${TOP}-${BOT} rt_test.cpp)
    target_link_libraries(range_test-${TOP}-${BOT} PRIVATE parlay CPAM aspen)
    if (${BOT} EQUAL "CPAM-Diff")
      target_compile_definitions(range_test-${TOP}-${BOT} PRIVATE -DUSE_DIFF_ENCODING)
    endif()
    if (${TOP} EQUAL "PAM")
      target_compile_definitions(range_test-${TOP}-${BOT} PRIVATE -DUSE_PAM_UPPER)
    endif()
    if (${BOT} EQUAL "PAM")
      target_compile_definitions(range_test-${TOP}-${BOT} PRIVATE -DUSE_PAM)
    endif()
endfunction()

range_test(CPAM CPAM)
range_test(CPAM CPAM-Diff)
range_test(PAM CPAM)
range_test(PAM CPAM-Diff)
range_test(PAM PAM)
