function(run_batch_update TOP BOT)
  add_executable(run_batch_updates-${TOP}-${BOT} run_batch_updates.cc)
    target_link_libraries(run_batch_updates-${TOP}-${BOT} PRIVATE parlay CPAM aspen)
    if (${BOT} EQUAL "CPAM-Diff")
      target_compile_definitions(run_batch_updates-${TOP}-${BOT} PRIVATE -DUSE_DIFF_ENCODING)
    endif()
    if (${TOP} EQUAL "PAM")
      target_compile_definitions(run_batch_updates-${TOP}-${BOT} PRIVATE -DUSE_PAM_UPPER)
    endif()
    if (${BOT} EQUAL "PAM")
      target_compile_definitions(run_batch_updates-${TOP}-${BOT} PRIVATE -DUSE_PAM)
    endif()
endfunction()

run_batch_update(CPAM CPAM)
run_batch_update(CPAM CPAM-Diff)
run_batch_update(PAM CPAM)
run_batch_update(PAM CPAM-Diff)
run_batch_update(PAM PAM)
